# sssn

./: .gitignore  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  index.html  mkdocs.yml  note.md  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  docs.yml
backends/: index.html
concepts/: index.html
concepts/channel/: index.html
concepts/channel-types/: index.html
concepts/channels/: index.html
concepts/data-plane/: index.html
concepts/events-artifacts-snapshots/: index.html
concepts/security/: index.html
concepts/system/: index.html
concepts/transport/: index.html
doc/: main.md
docs/: CNAME  getting-started.md  index.md
docs/backends/: index.md
docs/concepts/: channel-types.md  channel.md  channels.md  data-plane.md  events-artifacts-snapshots.md  guarantees.md  index.md  security.md  system.md  transport.md
docs/examples/: data-pipeline.md  discovery.md  index.md  request-response.md
docs/guides/: http-client.md  local-store.md  psihub-packages.md
docs/javascripts/: mermaid-init.20260629.js  mermaid-init.js  mermaid.js
docs/protocol/: index.md
docs/reference/: cli.md  http-api.md  python-api.md
docs/runtime/: index.md
docs/stylesheets/: custom.20260629.css  custom.20260702.css  custom.css
docs/tutorials/: 01-first-channel.md  02-broadcast.md  03-work-queue.md  04-multi-system.md  05-securing-channels.md  event-envelope.md  first-channel.md  http-client.md  index.md  lllm-tactic.md  local-store.md
drafts/: ARCHITECTURE.md  ARCHITECTURE_ADDENDUM.md  ARCHITECTURE_ADDENDUM_II.md  ARCHITECTURE_ADDENDUM_III.md  draft.md
examples/: index.html
examples/artifact_snapshot/: README.md  workflow.py
examples/channel_processor/: README.md  processor.py
examples/data-pipeline/: index.html
examples/discovery/: index.html
examples/first_channel/: README.md  workflow.py
examples/lllm_tactic_processor/: README.md  workflow.py
examples/psihub_manifest/: README.md  package_manifest.py
examples/request-response/: index.html
getting-started/: index.html
gsa/core/: channel.py
guides/http-client/: index.html
guides/local-store/: index.html
guides/psihub-packages/: index.html
overrides/partials/: header.html  source.html
protocol/: index.html
reference/cli/: index.html
reference/http-api/: index.html
search/: search_index.json
sssn/: __init__.py  cli.py  resolver.py
sssn/channels/: __init__.py  (+6 more)
stylesheets/: custom.20260702.css  custom.css
tests/: conftest.py  test_cli.py  test_core.py  test_docs_rendering.py  test_examples.py  test_fastapi_server.py  test_http_client.py  test_local_store.py  test_psihub_integration.py  test_resolver.py  test_sdist_contents.py
tutorials/: index.html
(+47 files in other folders)
