[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sssn"
version = "0.1.0"
description = "Semantic channel data plane for PSI services."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = ["pydantic>=2.7"]

[project.optional-dependencies]
docs = ["mkdocs-material>=9.5"]
dev = ["pytest>=8.0", "fastapi>=0.115", "httpx>=0.27"]
server = ["fastapi>=0.115", "uvicorn>=0.30"]
client = ["httpx>=0.27"]
all = ["fastapi>=0.115", "uvicorn>=0.30", "httpx>=0.27"]

[project.scripts]
sssn = "sssn.cli:main"

[project.urls]
Homepage = "https://github.com/Productive-Superintelligence/sssn"
Source = "https://github.com/Productive-Superintelligence/sssn"
Issues = "https://github.com/Productive-Superintelligence/sssn/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sssn*"]

[tool.setuptools.package-data]
sssn = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
